--- a/frontargentbank/src/App.css
+++ b/frontargentbank/src/App.css
@@ -1,9 +1,14 @@
 /* global */
-body{
+.App{
   margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    text-align: center;
+}
+
+.main {
+  flex: 1;
 }
 
 .sr-only {
