adjust fetch, clean code, adjust css , adjust img

--- a/frontargentbank/src/component/footer/footer.css
+++ b/frontargentbank/src/component/footer/footer.css
@@ -1,5 +1,5 @@
 
-.footer {
+/* .footer {
     display: flex;
     justify-content: center;
     border-top: 2px solid #ccc;
@@ -9,4 +9,4 @@
   .footer-text {
     margin: 0;
     padding: 0;
-  }
+  } */
