--- a/frontargentbank/src/pages/login/login.css
+++ b/frontargentbank/src/pages/login/login.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .bg-dark {
     background-color: #12002b;
@@ -48,3 +48,7 @@
     padding: 5px;
     font-size: 1.2rem;
   }
+
+  .input-error{
+    color: red;
+  } */
