--- a/frontargentbank/src/pages/profileUser/profileUser.css
+++ b/frontargentbank/src/pages/profileUser/profileUser.css
@@ -1,4 +1,4 @@
-
+/* 
 .account {
     display: flex;
     justify-content: space-between;
@@ -74,4 +74,4 @@
       width: 200px;
     }
   }
-  
+   */
